Closed Bug 588550 Opened 15 years ago Closed 15 years ago

Titlebar area becomes black when dragging bottom window frame into it

Categories

(Core :: Widget: Win32, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: hjalte, Assigned: robarnold)

Details

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b5pre) Gecko/20100818 Minefield/4.0b5pre Firefox/3.6.8 Build Identifier: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b5pre) Gecko/20100818 Minefield/4.0b5pre Firefox/3.6.8 With the latest nightly, the glass titlebar area at the top of the window becomes black when the window is scrunched vertically so that the bottom frame overlaps it. Reproducible: Always
Attached image Screenshot
Version: unspecified → Trunk
Hardware: x86 → x86_64
I can confirm this though I do not yet know why it is happening.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Hardware: x86_64 → x86
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → DUPLICATE
I am not convinced that this is a duplicate of bug 574957 as this particular problem did not exist until this very nightly as far as I can tell. In fact, I think it could be connected with bug 554982, which messed with the glass borders. Also, this happens even when the page is devoid of any flash or other plugin content.
This is not a dupe as it happens with a new window and about:blank - thus w/o plugins.
Status: RESOLVED → REOPENED
Resolution: DUPLICATE → ---
This bug happens due to incorrect margin calculations. Easy fix.
Assignee: nobody → tellrob
Nice one line patch :)
Attachment #467270 - Flags: review?(jmathies)
Attachment #467270 - Flags: review?(jmathies) → review+
Comment on attachment 467270 [details] [diff] [review] Don't adjust margins for borderless glass if the entire window is glass Requsting approval. This was a silly little regression from bug 554982.
Attachment #467270 - Flags: approval2.0?
Comment on attachment 467270 [details] [diff] [review] Don't adjust margins for borderless glass if the entire window is glass Easy approval. I might even have blocked on this!
Attachment #467270 - Flags: approval2.0? → approval2.0+
Status: REOPENED → RESOLVED
Closed: 15 years ago15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: