Bug 588550 - Titlebar area becomes black when dragging bottom window frame into it, r=jmathies a=joe